--- a/style.css
+++ b/style.css
@@ -106,6 +106,8 @@ body {
     text-align: center;
 }
 
+
+
 .card-box {
     padding-bottom: 20px;
 }
@@ -117,6 +119,7 @@ body {
 
 .card-box:hover {
     background: white;
+    transform: scale(1.05);
     border: 1px solid #D7D7D7;
     border-radius: 20px;
     box-shadow: 20px 20px 50px rgba(0, 0, 0, 0.1);
